--- a/index.html
+++ b/index.html
@@ -49,23 +49,15 @@
 
 		<div class="container-fluid">
 			<!-- Content Here -->
-			<div class="col-12 mt-2">
-				<!-- Header stuff or whatever -->
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
-					recusandae error odio labore voluptatibus perspiciatis velit excepturi
-					alias architecto quas, nihil voluptates possimus neque, cupiditate
-					blanditiis ipsa dolorem distinctio repudiandae?
-				</p>
+			<div class="row">
+				<!-- Hero Cover Image with some text, it would be cool to add a video maybe-->
+				
 			</div>
-			<div class="col-12 mt-2">
-				<!--  Content stuff -->
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
-					recusandae error odio labore voluptatibus perspiciatis velit excepturi
-					alias architecto quas, nihil voluptates possimus neque, cupiditate
-					blanditiis ipsa dolorem distinctio repudiandae?
-				</p>
+			<div class="row">
+				<!--  Featured courses -->
+				<div class="col-4">
+					
+				</div>
 			</div>
 			<div class="col-12 mt-2">
 				<!--  Content stuff -->
