--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			rel="stylesheet"
 			href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
 		/>
-		<link rel="stylesheet" href="styles/css/style.css" />
-		<!-- <link rel="stylesheet" href="styles/css/main.css" /> -->
+		<!-- <link rel="stylesheet" href="styles/css/style.css" /> -->
+		<link rel="stylesheet" href="./styles/css/main.css" />
 		<title>Financial edu app</title>
 	</head>
 	<body>
