--- a/index.html
+++ b/index.html
@@ -221,11 +221,10 @@
 			</div>
 
 			<div class="row get-started">
-				<div class="col-12 centre">
-					<h1>Learn about finance</h1>
-				</div>
-				<div class="col-12 centre">
-					<a href="#" class="btn btn-outline-dark">Get started &rarr; </a>
+				<div class="col-md-4"></div>
+				<div class="col-md-4"></div>
+				<div class="col-12 col-md-4">
+					<a href="#" class="btn btn-dark btn-lg">Get started &rarr; </a>
 				</div>
 			</div>
 
