--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 				</form>
 				<a
 					href="./pages/login.html"
-					class="btn btn-outline-dark my-2 my-sm-0 ml-2 btn-login"
+					class="btn btn-primary-small my-2 my-sm-0 ml-2 btn-login"
 					>Log in</a
 				>
 				<a
 					href="./pages/signup.html"
-					class="btn btn-dark my-2 my-sm-0 ml-2 btn-signup"
+					class="btn btn-primary-small-filled my-2 my-sm-0 ml-2 btn-signup"
 					>Sign up</a
 				>
 			</div>
@@ -91,7 +91,10 @@
 				<div class="col-12 col-md-6 centre">
 					<img src="./assets/freedom.png" alt="" />
 				</div>
-				<div class="col-12 col-md-5 text-center" style="padding-top: 45px">
+				<div
+					class="col-12 col-md-5 text-center"
+					style="margin-top: auto; margin-bottom: auto"
+				>
 					<h1>INVEST IN YOURSELF TODAY</h1>
 					<p>Unlock your financial freedom with one of our courses</p>
 					<a href="#" class="btn btn-lg btn-blue-primary">GET STARTED > </a>
@@ -133,7 +136,7 @@
 				</div>
 
 				<div class="container">
-					<p class="float-right"><a href="./assets/">Back to top</a></p>
+					<p class="float-right"><a href="#top">Back to top</a></p>
 				</div>
 			</footer>
 		</div>
