Sign up /login updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light" id="top">
-			<a class="navbar-brand" href="./index.html">LOGO</a>
+			<a class="navbar-brand" href="./index.html"
+				><img class="logo" src="./assets/Logo.svg" alt="Logo"
+			/></a>
 			<button
 				class="navbar-toggler"
 				type="button"
@@ -53,12 +55,12 @@
 				</form>
 				<a
 					href="./pages/login.html"
-					class="btn btn-outline-dark my-2 my-sm-0 ml-2 btn-login"
+					class="btn btn-primary-small my-2 my-sm-0 ml-2 btn-login"
 					>Log in</a
 				>
 				<a
 					href="./pages/signup.html"
-					class="btn btn-dark my-2 my-sm-0 ml-2 btn-signup"
+					class="btn btn-primary-small-filled my-2 my-sm-0 ml-2 btn-signup"
 					>Sign up</a
 				>
 			</div>
@@ -70,202 +72,76 @@
 				<!-- Hero Cover Image with some text, it would be cool to add a video maybe-->
 				<div class="col-12 col-md-6">
 					<h1>Learn about finance</h1>
-					<a href="#" class="btn btn-lg btn-outline-dark" id="tellmemore"
+					<p>
+						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to
+						educational resources to master your personal finances.
+					</p>
+					<a href="./" class="btn btn-lg btn-gold-primary" id="tellmemore"
 						>Tell me more &rarr;
 					</a>
 				</div>
 				<div class="col-md-6">
-					<!-- Hero Cover Image -->
-				</div>
-			</div>
-			<div class="row courses" id="courses">
-				<div class="col-12 row-title"><h2>Featured Content</h2></div>
-				<!--  Featured courses -->
-				<!-- Card Elements with Image, Course Title, Summary, Button to Sign Up page -->
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#signup" class="btn btn-outline-dark btn-course1"
-								>Start course &rarr;
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-outline-dark">Start course &rarr; </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-outline-dark">Start course &rarr; </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-outline-dark">Start course &rarr; </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-outline-dark">Start course &rarr; </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-4 mt-2">
-					<div class="card" style="width: 18rem;">
-						<img src="./assets/image.png" class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Course name</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-outline-dark">Start course &rarr; </a>
-						</div>
-					</div>
+					<img src="./assets/Header.png" alt="" />
 				</div>
 			</div>
 
-			<div class="row prequesites" id="prerequesites">
-				<!--  Prerequisites -->
-				<div class="col-12 row-title"><h2>Prerequisites</h2></div>
-				<div class="col-12 col-md-4 prequesite">
-					<svg
-						class="bd-placeholder-img rounded-circle"
-						width="140"
-						height="140"
-						xmlns="http://www.w3.org/2000/svg"
-						preserveAspectRatio="xMidYMid slice"
-						focusable="false"
-						role="img"
-						aria-label="Placeholder: 140x140"
-					>
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#777" />
-						<text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</svg>
-					<p>Laptop, tablet or mobile phone.</p>
-				</div>
-				<div class="col-12 col-md-4 prequesite">
-					<svg
-						class="bd-placeholder-img rounded-circle"
-						width="140"
-						height="140"
-						xmlns="http://www.w3.org/2000/svg"
-						preserveAspectRatio="xMidYMid slice"
-						focusable="false"
-						role="img"
-						aria-label="Placeholder: 140x140"
-					>
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#777" />
-						<text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</svg>
-					<p>A reliable internet connection.</p>
-				</div>
-				<div class="col-12 col-md-4 prequesite">
-					<svg
-						class="bd-placeholder-img rounded-circle"
-						width="140"
-						height="140"
-						xmlns="http://www.w3.org/2000/svg"
-						preserveAspectRatio="xMidYMid slice"
-						focusable="false"
-						role="img"
-						aria-label="Placeholder: 140x140"
-					>
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#777" />
-						<text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</svg>
-					<p>Proficient in written and spoken English.</p>
-				</div>
-			</div>
+			<div class="row" id="homepage"></div>
 
 			<div class="row get-started">
-				<div class="col-md-4"></div>
-				<div class="col-md-4"></div>
-				<div class="col-12 col-md-4">
-					<a href="#" class="btn btn-dark btn-lg">Get started &rarr; </a>
+				<div class="col-12 col-md-6 centre">
+					<img src="./assets/freedom.png" alt="" />
 				</div>
+				<div
+					class="col-12 col-md-5 text-center"
+					style="margin-top: auto; margin-bottom: auto"
+				>
+					<h1>INVEST IN YOURSELF TODAY</h1>
+					<p>Unlock your financial freedom with one of our courses</p>
+					<a href="#" class="btn btn-lg btn-blue-primary">GET STARTED > </a>
+				</div>
+				<div class="col-12 col-md-1"></div>
 			</div>
 
+			<!-- Footer Start-->
 			<footer class="pt-4 my-md-5 pt-md-5 border-top">
 				<div class="row">
 					<div class="col-12 col-md">
-						<img class="mb-2" src="./assets/#" alt="" />
-						<small class="d-block mb-3 text-muted"
-							>&copy; 2020 Company, Inc. &middot;</small
-						>
+						<img class="mb-2" src="./assets/footer-logo.svg" alt="" />
+						<small class="d-block mb-3 text-muted">&copy; 2020</small>
 					</div>
 					<div class="col-6 col-md">
-						<h5>Features</h5>
+						<h5>About us</h5>
+						<ul class="list-unstyled text-small">
+							<li><a class="text-muted" href="#">Team members</a></li>
+							<li><a class="text-muted" href="#">Head Quarters</a></li>
+							<li><a class="text-muted" href="#">Board</a></li>
+						</ul>
 					</div>
 					<div class="col-6 col-md">
-						<h5>Resources</h5>
+						<h5>Contact us</h5>
+						<ul class="list-unstyled text-small">
+							<li><a class="text-muted" href="#">Email</a></li>
+							<li><a class="text-muted" href="#">Telephone</a></li>
+							<li><a class="text-muted" href="#">Socials</a></li>
+						</ul>
 					</div>
 					<div class="col-6 col-md">
-						<h5>About</h5>
+						<h5>Affiliates</h5>
+						<ul class="list-unstyled text-small">
+							<li><a class="text-muted" href="#">GetSmart</a></li>
+							<li><a class="text-muted" href="#">UNISA</a></li>
+							<li><a class="text-muted" href="#"></a></li>
+						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-12 col-md"></div>
-					<div class="col-6 col-md">
-						<h5>Features</h5>
-					</div>
-					<div class="col-6 col-md">
-						<h5>Resources</h5>
-					</div>
-					<div class="col-6 col-md">
-						<h5>About</h5>
-					</div>
-				</div>
+
 				<div class="container">
 					<p class="float-right"><a href="#top">Back to top</a></p>
 				</div>
 			</footer>
-
-			<!-- Footer Start-->
 		</div>
 
+		<script src="./node_modules/handlebars/dist/handlebars.min.js"></script>
 		<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
