--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 			<div class="hero" id="hero">
 				<!-- Hero Cover Image with some text, it would be cool to add a video maybe-->
 				<div class="col-12 col-md-6">
-					<h1>Learn about finance</h1>
+					<h1>Learn <br/>about finance</h1>
 					<p>
-						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to
-						educational resources to master your personal finances.
+						Get <strong>FREE</strong> and <strong>UNLIMITED</strong> access to<br/>
+						educational resources to master <br/>your personal finances.
 					</p>
 					<a href="./" class="btn btn-lg btn-gold-primary" id="tellmemore"
 						>Tell me more &rarr;
@@ -88,15 +88,16 @@
 			<div class="row" id="homepage"></div>
 
 			<div class="row get-started">
-				<div class="col-12 col-md-6 centre">
+				<div class="col-12 col-md-5 centre">
 					<img src="./assets/freedom.png" alt="" />
 				</div>
+				<div class="col-12 col-md-1"></div>
 				<div
 					class="col-12 col-md-5 text-center"
 					style="margin-top: auto; margin-bottom: auto"
 				>
-					<h1>INVEST IN YOURSELF TODAY</h1>
-					<p>Unlock your financial freedom with one of our courses</p>
+					<h1>INVEST IN <br/>YOURSELF TODAY</h1>
+					<p>Unlock your financial freedom <br/>with one of our courses</p>
 					<a href="#" class="btn btn-lg btn-blue-primary">GET STARTED > </a>
 				</div>
 				<div class="col-12 col-md-1"></div>
