--- a/pages/signup.html
+++ b/pages/signup.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="row signup">
 			<div class="col-12 text-center logo">
-				<a href="index.html" >
+				<a href="../index.html" >
 					<img src="../Icons/imali.png" style="width: 15%; height: auto;">
 					</a>
 			</div>
