--- a/pages/course.html
+++ b/pages/course.html
@@ -60,7 +60,7 @@
 
 		<div class="container-fluid">
 			<!-- Content Here -->
-			<div class="course-header" id="course-header">
+			<div class="row course-header" id="course-header">
 				<!-- Hero Cover Image with some text, it would be cool to add a video maybe-->
 				<div class="col-12">
 					<h1>Introduction to finance</h1>
@@ -68,10 +68,16 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
 						maximus dui sed
 					</p>
-					<a href="./" class="btn btn-lg btn-green-primary" id="tellmemore">
-						Start course
+				</div>
+				<div class="col-12 col-md-">
+					<a href="./course-start.html" class="btn btn-lg btn-green-primary" id="tellmemore">
+						<img src="../assets/play.svg" alt=""> Start course &rarr;
 					</a>
 				</div>
+				<div class="col-md-6"><p><img src="../assets/download.svg" alt=""> Download course</p></div>
+				<div class="col-md-6"><p>Duration: 1hr</p></div>
+				<div class="col-md-6"><p>Release: 20 Aug 2020</p></div>
+				<div class="col-md-6"><p>Share course</p><img src="../assets/socials.png" alt=""> </div>
 			</div>
 
 			<div class="course-content">
@@ -90,10 +96,28 @@
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show active" id="toc" role="tabpanel" aria-labelledby="toc-tab">Course breakdown</div>
-					<div class="tab-pane fade" id="description" role="tabpanel" aria-labelledby="description-tab">Course description</div>
-					<div class="tab-pane fade" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">Comment section</div>
-					<div class="tab-pane fade" id="related" role="tabpanel" aria-labelledby="related-tab">Related courses here</div>
+					<div class="tab-pane fade show active" id="toc" role="tabpanel" aria-labelledby="toc-tab">
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">History of money</li>
+							<li class="list-group-item">Dapibus ac facilisis in</li>
+							<li class="list-group-item">Debt trap</li>
+						</ul>
+					</div>
+					<div class="tab-pane fade" id="description" role="tabpanel" aria-labelledby="description-tab">
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">Cras justo odio</li>
+							<li class="list-group-item">Dapibus ac facilisis in</li>
+							<li class="list-group-item">Morbi leo risus</li>
+							<li class="list-group-item">Porta ac consectetur ac</li>
+							<li class="list-group-item">Vestibulum at eros</li>
+						</ul>
+					</div>
+					<div class="tab-pane fade" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">
+						
+					</div>
+					<div class="tab-pane fade" id="related" role="tabpanel" aria-labelledby="related-tab">
+						
+					</div>
 				</div>
 	
 			</div>
