--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
 		/>
 		<!-- <link rel="stylesheet" href="styles/css/style.css" /> -->
 		<link rel="stylesheet" href="./styles/css/main.css" />
+
+
 		<title>Financial edu app</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light" id="top">
-			<a class="navbar-brand" href="./index.html"
-				><img class="logo" src="./assets/Logo.svg" alt="Logo"
+	<div class="fixed">
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light " >
+			<a class="navbar-brand"></a>
+			<a href="./index.html" ></a>
+			<img class="logo" src="./Icons/imali.png" alt="Logo"
 			/></a>
 			<button
 				class="navbar-toggler"
 				type="button"
 				data-toggle="collapse"
-				data-target="#navbarTogglerDemo02"
-				aria-controls="navbarTogglerDemo02"
+				data-target="#navbarsExample04"
+				aria-controls="navbarsExample04"
 				aria-expanded="false"
 				aria-label="Toggle navigation"
 			>
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+			<div class="collapse navbar-collapse navstyle" id="navbarsExample04">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-4 text-center">
 					<li class="nav-item">
 						<a class="nav-link active" href="#courses">Courses </a>
@@ -65,7 +70,9 @@
 				>
 			</div>
 		</nav>
-
+		
+	</div>	
+		  
 		<div class="container-fluid">
 			<!-- Content Here -->
 			<div class="hero" id="hero">
@@ -85,7 +92,11 @@
 				</div>
 			</div>
 
-			<div class="row" id="homepage"></div>
+			
+				<div class="middle-row" id="homepage"></div>
+			
+
+			
 
 			<div class="row get-started">
 				<div class="col-12 col-md-5 centre">
