Added course-start.html page

--- a/pages/course.html
+++ b/pages/course.html
@@ -54,7 +54,7 @@
 					/>
 				</form>
 				<p>Hello, Z</p>
-				<img src="../assets/avatar.svg" alt="" />
+				<img id="avatar" src="../assets/avatar.svg" alt="" />
 			</div>
 		</nav>
 
