Revert "Merge pull request #9 from ruthas/Home"
This reverts commit 5615d545b16bbc2cf6125796fa833a2724a7b073, reversing
changes made to ed6321ac6f571e82ded81b8f2a5321f7761c4f92.

--- a/pages/course.html
+++ b/pages/course.html
@@ -54,7 +54,7 @@
 					/>
 				</form>
 				<p>Hello, Z</p>
-				<img id="avatar" src="../assets/avatar.svg" alt="" />
+				<img src="../assets/avatar.svg" alt="" />
 			</div>
 		</nav>
 
